--- a/EventBooking/Views/Events/Index.cshtml
+++ b/EventBooking/Views/Events/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Discover Cultural Experiences";
 }
 
-<div class="container py-5" style="margin-top: 100px;">
+<div class="container py-5 pt-navbar">
     <div class="row align-items-end mb-5 animate-slide-up">
         <div class="col-lg-6">
             <div class="accent-line mb-3"></div>
