--- a/EventBooking/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EventBooking/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="container" style="margin-top: 120px;">
+<div class="container pt-navbar">
     <div class="row justify-content-center">
         <div class="col-md-5">
             <div class="card glass-panel border-0 p-4 p-md-5 animate-slide-up">
