--- a/EventBooking/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EventBooking/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="container" style="margin-top: 120px;">
+<div class="container pt-navbar">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card glass-panel border-0 p-4 p-md-5 animate-slide-up">
