--- a/EventBooking/Views/Booking/Index.cshtml
+++ b/EventBooking/Views/Booking/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container py-5" style="margin-top: 100px;">
+<div class="container py-5 pt-navbar">
     <!-- ... Header content ... -->
     <!-- (Assuming previous content is correct) -->
     
