--- a/EventBooking/Views/Reviews/Index.cshtml
+++ b/EventBooking/Views/Reviews/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container py-5 mt-5" style="margin-top: 100px;">
+<div class="container py-5 pt-navbar">
     <div class="row align-items-end mb-5 animate-slide-up">
         <div class="col-lg-6">
              <div class="accent-line mb-3"></div>
